--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
     align-items: center;
     gap: 100px;
 }
+
 .type-food-eat {
     width: 150px;
     height: 30px;
@@ -34,13 +35,15 @@
     background-color: rgb(255, 255, 255);
     font-size: 15px;
     font-weight: bold;
-    
+
 }
 
-.type-food-eat:hover,.type-food-drink:hover  {
+.type-food-eat:hover,
+.type-food-drink:hover {
     background-color: #c1d2da !important;
     cursor: pointer;
 }
+
 .active {
     background-color: #EFEFEF;
 }
@@ -65,7 +68,7 @@
     position: relative;
 }
 
-.food .image img{
+.food .image img {
     border-radius: 50%;
     width: 80px;
     height: 80px;
@@ -82,7 +85,8 @@
     font-size: 15px;
     font-weight: bold;
 }
-.food .id  {
+
+.food .id {
     position: absolute;
     left: 80%;
     top: 100px;
@@ -102,9 +106,11 @@
     font-weight: bold;
     /* background-color: rgb(133, 255, 41); */
 }
+
 .food .price .coin {
     display: inline-block;
 }
+
 .food .add {
     position: absolute;
     left: 70%;
@@ -119,5 +125,4 @@
     color: rgb(231, 59, 59);
 }
 
-
-
+/* -------------------------------------- */
