--- a/css/signin.css
+++ b/css/signin.css
@@ -1,37 +1,39 @@
 *{
     box-sizing: border-box;
     margin: 0;
-    overflow: hidden;
+    
 }
 
 .container {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+   
 }
 
 .image {
     flex: 1;
     width: 100%;
     background-color: red;
-    height: 100%;
+   
 }
 .image img{
     /* width: 100%; */
     object-fit: cover;
-    height: 100vh;
+    height: 100%;
     width: 100%;
 }
 
 .form {
     flex: 1;
     /* background-color: yellow; */
+    overflow: auto;
 }
 
 .logo-image {
     width: 80%;
-    margin: 30px auto;
+    margin: 0px 0px;
     /* background-color: yellowgreen; */
+    
 }
 .logo-image img {
     width: 100%;
@@ -40,6 +42,7 @@
 .location {
     display: flex;
     flex-direction: row;
+    
 }
 
 .location .chao {
@@ -115,6 +118,11 @@
     align-items: center;
     margin: 10px 100px;
     color: #00302E;
+   justify-content: center;
+    
 }
 
-
+.bottom a {
+   
+    text-decoration: none;
+}
