--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,13 @@
 .svg {
     width: 100px;
     height: 100px;
-    
+}
 
+.cart p {
+    position: absolute;
+    bottom: 44px;
+    right: 30px;
+    padding: 8px 8px;
+    background-color: #F3C294;
+    font-weight: bold;
 }
