--- a/css/payment.css
+++ b/css/payment.css
@@ -2,6 +2,7 @@
 	/* background-color: red; */
 	width: 80%;
 	position: relative;
+	background-color: #F7F7F7;
 }
 
 .top-text p {
@@ -9,6 +10,7 @@
 	font-size: 20px;
 	font-weight: bold;
 	color: red;
+	
 }
 
 .payment_list {
@@ -17,6 +19,11 @@
     gap: 10px;
     padding-left: 200px;
     padding-bottom: 20px;
+	
+}
+
+.payment_list :hover {
+	background-color: #F07B0E;
 }
 
 .payment_list a {
@@ -24,6 +31,7 @@
 	text-decoration: none;
     font-weight: bold;
     font-size: 32px;
+	
 }
 
 
