--- a/chart.pug
+++ b/chart.pug
@@ -4,10 +4,10 @@ html(lang='vi')
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     title Canteen US
-    link(rel='stylesheet' href='../css/base.css')
-    link(rel='stylesheet' href='../css/grid.css')
-    link(rel='stylesheet' href='../css/main.css')
-    link(rel='stylesheet' href='../css/style.css')
+    link(rel='stylesheet' href='./assets/css/base.css')
+    link(rel='stylesheet' href='./assets/css/grid.css')
+    link(rel='stylesheet' href='./assets/css/main.css')
+    link(rel='stylesheet' href='./assets/css/style.css')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css')
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto&display=swap')
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css')
@@ -23,7 +23,7 @@ html(lang='vi')
                   i.header__mobile-search-icon.fas.fa-search
                 // Header Logo
                 .header__logo.hide-on-tablet
-                  img.header__logo-img(src='../assets/img/logo.png' alt='')
+                  img.header__logo-img(src='./assets/img/logo.png' alt='')
                   a.header__logo-link(href='/')
                 input#mobile-search-checkbox.header__search-checkbox(type='checkbox' hidden='')
                 // Header Search
@@ -34,11 +34,11 @@ html(lang='vi')
                     i.header__search-btn-icon.fas.fa-search
                 // Header Logo
                 .header__location.hide-on-tablet
-                  img.header__location-img(src='../assets/img/location.png' alt='')
+                  img.header__location-img(src='./assets/img/location.png' alt='')
                   a.header__location-link(href='/')
                 // User
                 .header__user
-                  img.header__navbar-user-img(src='../assets/img/user_avatar.png' alt='')
+                  img.header__navbar-user-img(src='./assets/img/user_avatar.png' alt='')
                   ul.header__navbar-user-menu
                     li.header__navbar-user-item
                       a(href='') Tài khoản của tôi
@@ -51,11 +51,11 @@ html(lang='vi')
             .col.l-2.m-0.c-0(style='margin-top: 50px;')
               nav.category
                 ul.category-list
-                  li.category-item.category-item--active
-                    button.category-item__link(href='https://www.w3schools.com/')
-                      | Trang
-                      | chủ
-                    // <a href="#" class="category-item__link">Trang chủ</a>
+                  li.category-item
+                    button.category-item__link
+                      a(style='text-decoration: none;' href='./index.html')
+                        | Trang
+                        | chủ
                   li.category-item
                     button.category-item__link
                       | Thực đơn
@@ -66,9 +66,9 @@ html(lang='vi')
                   li.category-item
                     button.category-item__link Khách hàng
                     // <a href="#" class="category-item__link">Khách hàng</a>
-                  li.category-item
-                    button.category-item__link Thống kê
-                    // <a href="#" class="category-item__link">Thống kê</a>
+                  li.category-item.category-item--active
+                    button.category-item__link
+                      a(style='text-decoration: none;' href='./chart.html') Thống kê
                   li.category-item
                     button.category-item__link Nhân viên
                     // <a href="#" class="category-item__link">Nhân viên</a>
@@ -76,25 +76,26 @@ html(lang='vi')
                     button.category-item__link Tạo thẻ khách hàng
                     // <a href="#" class="category-item__link">Tạo thẻ khách hàng</a>
             .right
-              .type-food
-                button#food.type-food-eat
-                  a(href='../pages/index.html' style='text-decoration: none; color: #39B1E4;') Đồ ăn
-                button#drink.type-food-drink.active Nước, bánh
-              .list
-                
-                //- each drink in drinks -->goi drink
-                //- .food
-                //-   .image
-                //-     img(src=#{drink.img} alt='')
-                //-   .name drink.name
-                //-   .id drink.id
-                //-   span.price
-                //-     | drink.price 
-                //-     .coin VND
-                //-   button.add Thêm
-                
-        a(href='../pages/dashboard.html')
-          .cart
-            img.svg(src='../assets/img/cart-svgrepo-com.svg')
-            p 1
-    script(src='../js/index.js')
+              div
+                canvas#myChart
+              script(src='https://cdn.jsdelivr.net/npm/chart.js')
+              script.
+                const ctx = document.getElementById('myChart');
+                new Chart(ctx, {
+                type: 'line',
+                data: {
+                labels: ['Tháng 1', 'Tháng 2', 'Tháng 3', 'Tháng 4', 'Tháng 5', 'Tháng 6', 'Tháng 7', 'Tháng 8', 'Tháng 9', 'Tháng 10', 'Tháng 11', 'Tháng 12'],
+                datasets: [{
+                label: 'Thống kê thu nhập',
+                data: [12, 19, 3, 5, 2, 3, 50, 12, 1, 21, 2, 2, 12, 1, 5, 5],
+                borderWidth: 1
+                }]
+                },
+                options: {
+                scales: {
+                y: {
+                beginAtZero: true
+                }
+                }
+                }
+                });
